# governed-compression

./: .gitignore  CODEOWNERS  CONSTITUTION.md  CONTRIBUTING.md  KRINEIA.md  README.md  SECURITY.md  hummbl.repo.yaml  llms.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
_receipts/krineia/: primary.jsonl
docs/: REPO_HEALTH.md  ROADMAP.md
docs/adr/: ADR-001-repo-governance-baseline.md
docs/handoffs/: 2026-06-22-repo-governance-baseline.md
governed_compression/: __init__.py  cli.py  governance.yml
governed_compression/bench/: distortion.py
governed_compression/core/: __init__.py  config.py  reference.py
governed_compression/experiment/: __init__.py  tuples.py
governed_compression/logging/: tuples.py
tests/: test_reference.py
