[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governed-compression"
version = "0.1.0"
description = "Private research surface for governed compression experiments"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "numpy>=1.26",
  "hummbl-governance>=1.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "ruff>=0.4",
]

[project.scripts]
governed-compression = "governed_compression.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["governed_compression*"]

[tool.setuptools.package-data]
governed_compression = ["governance.yml"]
